--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -11,16 +11,18 @@
 		</ul>
 		
 		<div class="file-batch-actions">
-			<button class="btn btn-default"
+			<button class="btn btn-sm btn-default"
 					x-document-mgr-add-folder x-project="project"
 					x-node="documentMgr.currentNode"
-				    title="Add Folder">Add</button>
+				    title="Add Folder"><span class="glyphicon glyphicon-plus"></span>&nbsp; Add Folder</span></button>
+			<!--
 			<button class="btn btn-default" 
 					x-document-mgr-rename-folder
 					x-project="project"
 					x-node="documentMgr.currentNode"
 					ng-disabled="documentMgr.currentNode == 'ROOT'"
 					title="Rename Folder">Rename</button>
+			-->
 		</div>
 
 	</div>
