--- a/modules/documents/client/views/document-manager-add.html
+++ b/modules/documents/client/views/document-manager-add.html
@@ -1,26 +1,28 @@
 
-<div class="modal-header">
+<form ng-submit="addFolder.ok()">
+    <div class="modal-header">
 
-    <!-- Cancel and close modal -->
-    <button class="btn btn-default close" type="button" ng-click="addFolder.cancel()">
-		<span aria-hidden="true">&times;</span>
-	</button>
-    <h3 class="modal-title">{{addFolder.title}}</h3>
-</div>
-
-<div class="modal-body">
-    <div class="form-group">
-        <label class="control-label">Enter a Folder Name</label>
-        <input class="form-control" ng-model="addFolder.entryText" type="text" />
+        <!-- Cancel and close modal -->
+        <button class="btn btn-default close" type="button" ng-click="addFolder.cancel()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <h3 class="modal-title">{{addFolder.title}}</h3>
     </div>
-</div>
 
-<div class="modal-footer">
+    <div class="modal-body">
+        <div class="form-group">
+            <label class="control-label">Enter a Folder Name</label>
+            <input class="form-control" ng-model="addFolder.entryText" type="text" autofocus />
+        </div>
+    </div>
 
-    <!-- Cancel and close Modal -->
-    <button class="btn btn-default" type="button" ng-click="addFolder.cancel()">Cancel</button>
+    <div class="modal-footer">
 
-    <!-- Disabled until something is entered into the input field -->
-    <button class="btn btn-primary" ng-click="addFolder.ok()" ng-disabled="addFolder.entryText === ''">OK</button>
+        <!-- Cancel and close Modal -->
+        <button class="btn btn-default" type="button" ng-click="addFolder.cancel()">Cancel</button>
 
-</div>
+        <!-- Disabled until something is entered into the input field -->
+        <button class="btn btn-primary" type="submit" ng-disabled="addFolder.entryText === ''">OK</button>
+
+    </div>
+</form>
