--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -11,7 +11,7 @@
 		</ul>
 		
 		<div class="file-batch-actions">
-			<button class="btn btn-default"
+			<button class="btn btn-sm btn-default"
 					ng-disabled="!documentMgr.selectedNode"
 					x-document-mgr-add-folder x-project="project"
 					x-root="documentMgr.rootNode"
